Fix z-index on landing page so the waves are placed behind the content

--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -2,7 +2,11 @@
 
 
 .landing-wrapper {
-  z-index: -10;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: -1000;
+  // z-index: -10;
   height: 100vh;
   background-image: linear-gradient(to top, lighten(#181743, 15%), #181743);
 }
@@ -36,7 +40,7 @@
 }
 
 .nav-container {
-  // z-index: 9999 !important;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -50,7 +54,7 @@
 
 // Wavey
 .ocean {
-  z-index: 0;
+  z-index: -1;
   width: 100%;
   height: 5%;
   position:absolute;
